[project]
name = "oltk"
version = "0.0.1"
description = "Obsidian Vault processing toolkit for Data-Scientists"
authors = [
  { name = "ig-kh", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "polars",
  "networkx"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oltk", "oltk.*"]