[project]
name = "oltk"
version = "0.0.1"
description = "Obsidian Vault processing toolkit for Data-Scientists"
authors = [
  { name = "ig-kh", email = "ig.gr1nn1ng.kh@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "numpy>=1.20,<2.0"
  "polars>=1.37",
  "networkx>=3.6",
  "pyyaml>=6"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oltk", "oltk.*"]